add newmessage and createmessage events

--- a/public/index.html
+++ b/public/index.html
@@ -7,6 +7,15 @@
     <title>Document</title>
 </head>
 <body>
-    <p>Welcome to the chat ap - you bastard</p>
+    <h1>Welcome to the chat ap - you bastard</h1>
+
+    <div id="incomingMail">
+        <div><label for="subject" /><text id="subject"></text></div>
+        <div><label for="text"></label><text id="text"></text></div>
+        <div><label for="createTime"></label><text id="createTime">...</text></div>
+    </div>
+    
+    <script src="/socket.io/socket.io.js">    </script>
+    <script src="/js/index.js"></script>
 </body>
 </html>
