--- a/public/index.html
+++ b/public/index.html
@@ -7,15 +7,18 @@
     <title>Document</title>
 </head>
 <body>
-    <h1>Welcome to the chat ap - you bastard</h1>
+    <h1>Welcome to the chat app</h1>
 
-    <div id="incomingMail">
-        <div><label for="subject" /><text id="subject"></text></div>
-        <div><label for="text"></label><text id="text"></text></div>
-        <div><label for="createTime"></label><text id="createTime">...</text></div>
-    </div>
+    <ol id="messages">
+    </ol>
     
-    <script src="/socket.io/socket.io.js">    </script>
+    <form id="message-form">
+        <input name="message" type="text" placeholder="Message here.." />
+        <button>Send</button>
+    </form>
+    
+    <script src="/socket.io/socket.io.js"></script>
+    <script src="/js/libs/jquery-3.3.1.min.js"></script>
     <script src="/js/index.js"></script>
 </body>
 </html>
